--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 **~/CS415Project03/**
 
 
-**Run in Comman Line:**
-    `python <directory name> <file number>`
+**Run in Command Line:**
+    `python <directory path> <file number>`
