- started main() - needs to be run from the command line for it to work --> python Main.py '#' - grabs needed files from specified directory - inputs files into a list ('fileList')

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 **~/CS415Project03/**
-
+by: Robert Sapien & Vince Bjazevic
 
 **Run in Command Line:**
-    `python <directory path> <file number>`
+    `python3 <directory path> <file number>`
