--- a/README
+++ b/README
@@ -3,4 +3,4 @@ by: Robert Sapien & Vince Bjazevic
 
 **Run in Command Line:**
 
-    `python3 <directory path> <file number>`
+    `python3 Main.py <directory path> <file number>`
